--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  font-family: "Nunito Sans", sans-serif;
+}
+.spacer {
+  flex: 1 1 auto;
+}
