--- a/src/app/pages/estadisticas/estadisticas.component.css
+++ b/src/app/pages/estadisticas/estadisticas.component.css
@@ -1,11 +1,11 @@
-mat-card {
+/* mat-card {
   min-width: 440px;
   height: auto;
   display: flex;
   flex-direction: column;
   padding: 30px;
   transition: all 1s ease-out;
-}
+} */
 mat-card:hover {
   transform: scale(1.05);
   box-shadow: 0px 3px 5px rgb(250, 115, 178);
@@ -27,7 +27,8 @@ mat-card:hover .text-respuestas {
   border-bottom: 4px solid #3f51b5;
 }
 .cards {
+  padding: 50px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
 }
