--- a/src/app/pages/encuesta/encuesta.component.css
+++ b/src/app/pages/encuesta/encuesta.component.css
@@ -54,6 +54,13 @@ mat-card {
   box-shadow: 0px 3px 5px rgb(250, 115, 178) !important;
   border-radius: 20px;
 }
+#respuestas-g {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+}
 mat-card-title span {
   display: block;
   font-size: 1.5em;
@@ -64,6 +71,6 @@ mat-card-title span {
 }
 mat-card .text-respuestas {
   margin: 10px 0px 15px 0px;
-  display: inline;
+  display: block;
   border-bottom: 4px solid #3f51b5;
 }
